# standard_dragon

./: .gitignore  Array.h  Array.hpp  CMakeLists.txt  Indent.hpp  README.md  WemAudioPack.hpp  WemSoundbank.hpp  dragon.h  dragon.hpp  dragon_noesis.hpp  standard_dragon.natvis  standard_dragonConfig.cmake.in
bkhd/: WemBankHeader.hpp  WemChunk.hpp  WemData.hpp  WemDataIndex.hpp  WemEffectPipeline.hpp  WemEnvironment.hpp  WemHierarchy.hpp  WemSoundTypeGroup.hpp  WemSoundTypeId.hpp
exception/: invalid_data.hpp  not_implemented.hpp
hash/: fnv1a.hpp
include/standard_dragon/: Array.hpp  Indent.hpp  WemAudioPack.hpp  WemSoundbank.hpp  dds_support.hpp  dragon.hpp  dragon_noesis.hpp  macros.hpp  standard_dragon.natvis  uint128_t.hpp
include/standard_dragon/bkhd/: WemBankHeader.hpp  WemChunk.hpp  WemData.hpp  WemDataIndex.hpp  WemEffectPipeline.hpp  WemEnvironment.hpp  WemHierarchy.hpp  WemSoundTypeGroup.hpp  WemSoundTypeId.hpp
include/standard_dragon/bkhd/hirc/: WemHierarchyAction.hpp  WemHierarchyChunk.hpp  WemHierarchyContainer.hpp  WemHierarchyEvent.hpp  WemHierarchyMusic.hpp  WemHierarchyMusicSegment.hpp  WemHierarchyMusicSwitch.hpp  WemHierarchyMusicTrack.hpp  WemHierarchyShared.hpp  WemHierarchySound.hpp  WemHierarchySwitch.hpp  WemHierarchyType.hpp  WemHierarchyUnimplemented.hpp
include/standard_dragon/exception/: invalid_data.hpp  not_implemented.hpp  out_of_bounds.hpp  reasonable.hpp
include/standard_dragon/hash/: fnv1a.hpp
standard_dragon/: Array.h  dragon.h
tool/: CMakeLists.txt
tool/akpkdump/: CMakeLists.txt  main.cpp
tool/bnkdump/: CMakeLists.txt  main.cpp
tool/fnvsum/: CMakeLists.txt  main.cpp
