project(fnvsum)

add_executable(fnv1sum main.cpp)
target_compile_definitions(fnv1sum PRIVATE DRAGON_FNVMODE_32)
target_compile_definitions(fnv1sum PRIVATE DRAGON_FNVBITS=32)
add_executable(fnv1asum main.cpp)
target_compile_definitions(fnv1asum PRIVATE DRAGON_FNVMODE_A32)
target_compile_definitions(fnv1asum PRIVATE DRAGON_FNVBITS=32)

add_executable(fnv1asum30 main.cpp)
target_compile_definitions(fnv1asum30 PRIVATE DRAGON_FNVMODE_32)
target_compile_definitions(fnv1asum30 PRIVATE DRAGON_FNVBITS=30)
add_executable(fnv1sum30 main.cpp)
target_compile_definitions(fnv1sum30 PRIVATE DRAGON_FNVMODE_A32)
target_compile_definitions(fnv1sum30 PRIVATE DRAGON_FNVBITS=30)

add_executable(fnv1sum64 main.cpp)
target_compile_definitions(fnv1sum64 PRIVATE DRAGON_FNVMODE_64)
target_compile_definitions(fnv1sum64 PRIVATE DRAGON_FNVBITS=64)
add_executable(fnv1asum64 main.cpp)
target_compile_definitions(fnv1asum64 PRIVATE DRAGON_FNVMODE_A64)
target_compile_definitions(fnv1asum64 PRIVATE DRAGON_FNVBITS=64)
